# opengl_stabilize_visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: CaptureLib.cpp  CaptureLib.h  bgr_sdl.cpp  bgr_sdl.hpp  capturer.h  main.cpp  opencv_file_sink.h  opencv_file_sink.hpp  stabilize.hpp  videostab.cpp  videostab.h  yuv_sdl.h
src/models/: render_status.cpp  render_status.hpp
src/renders/: bgr_sdl.cpp  bgr_sdl.hpp  yuv_gl.cpp  yuv_gl.hpp  yuv_sdl.h
